--- a/app/views/spree/admin/catalog_entries/edit.html.erb
+++ b/app/views/spree/admin/catalog_entries/edit.html.erb
@@ -4,17 +4,63 @@
   <%= render 'shared/error_messages', :target => @catalog_entry %>
 <% end %>
 
-<%= form_for([:admin, @catalog_entry], :html => { :multipart => true }) do |f| %>
-    <p>
-      <% if @catalog_entry.image.exists?(:small) %>
-        <b><%= t('.preview') %>:</b><br/>
-        <%= link_to image_tag(@catalog_entry.image.url(:small)), @catalog_entry.image.url(:original) %>
-      <% end %>
-    </p>
-    <%= render "form", :form => f %>
-  </table>
-  <p class="form-buttons">
-    <%= button t("update") %>
-    or <%= link_to t("cancel"), admin_catalog_entries_url, :id => "cancel_link" %>
-  </p>
+<div class="row">
+
+  <div class="edit-product-form">
+    <%= form_for([:admin, @catalog_entry], :html => { :multipart => true }) do |f| %>
+      <p>
+        <% if @catalog_entry.image.exists?(:small) %>
+          <b><%= t('.preview') %>:</b><br/>
+          <%= link_to image_tag(@catalog_entry.image.url(:small)), @catalog_entry.image.url(:original) %>
+        <% end %>
+      </p>
+      <%= render "form", :form => f %>
+      <p class="form-buttons">
+        <%= button t("update") %>
+        or <%= link_to t("cancel"), admin_catalog_entries_url, :id => "cancel_link" %>
+      </p>
+    <% end %>
+  </div>
+  
+  <div class="select-products" id="linked-products">
+    <h3>Linked Products</h3>
+    <ul class="select-product-list">
+      <%= render :partial => "link", :collection => @catalog_entry.products, :as => :product, :locals => { :action => "remove" } %>
+    </ul>
+  </div>
+      
+  <div class="select-products" id="unlinked-products">
+    <h3>Unlinked Products</h3>
+    <ul class="select-product-list">
+      <%= render :partial => "link", :collection => @products, :as => :product %>
+    </ul>
+  </div>
+  
+</div>
+  
+<br class="clear"/>
+
+<% content_for :head do %>
+  <%= stylesheet_link_tag "admin/catalog_entry" %>
 <% end %>
+
+<script type="text/javascript">
+//<![CDATA[
+  (function($){      
+    $(".select-product-list a").live("click", function(evt) {
+      evt.preventDefault();
+      var a = $(this);
+      // only allow one click
+      if (a.data("clicked")) { return; }
+      a.data("clicked", true);
+      var href = a.attr("href");
+      var li = a.parent().css("opacity", 0.5);
+      var list = $(href.match("/add") ? "#linked-products ul" : "#unlinked-products ul");
+      $.get(href, function(result) {
+        li.remove();
+        list.append(result);
+      });      
+    });
+  })(jQuery);
+//]]>
+</script>
